src/components/homeHero/homeHero.css
.home-hero-section {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 1fr;
  justify-items: center;
  height: 90vh;
  height: 90svh;
}

.home-hero-section > * {
  grid-row: 1;
  grid-column: 1;
}

.home-hero-bg {
  position: relative;
  background-color: var(--clr-dark);
  /* Used if the image is unavailable */
  width: 100%;
  height: 90vh;
  height: 90svh;
  background-position: center;
  background-size: cover;
}

.home-hero-bg > video {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.home-hero-overlay {
  position: absolute;
  object-fit: cover;
  pointer-events: none;
}

.home-hero-text {
  --home-pitch-top: 46%;
  --home-pitch-fs: 1.2rem;
  position: absolute;
  top: var(--home-pitch-top);
  color: var(--clr-light);
  text-align: center;
  margin-inline: auto;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.home-pitch {
  line-height: 1.3;
  text-transform: uppercase;
  font-size: var(--home-pitch-fs);
  font-weight: 600;
}

@media (width < 1260px) {
  .home-hero-text {
    --home-pitch-top: 45%;
    --home-pitch-fs: 1.2rem;
  }

  .home-pitch {
    width: 28ch;
  }
}

@media (width < 550px) {
  .home-hero-text {
    --home-pitch-top: 44%;
    --home-pitch-fs: 0.8rem;
  }
}

